--- a/src/app/pages/profile/components/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/components/edit-profile/edit-profile.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="profile != null; else profileNull">
+<!-- <div *ngIf="profile != null; else profileNull">
   <nz-form-item>
     <nz-form-label [nzSpan]="6" nzFor="first-name">*First name</nz-form-label>
     <nz-form-control [nzSpan]="14">
@@ -106,4 +106,4 @@
 </div>
 <ng-template #profileNull>
   Profile is null
-</ng-template>
+</ng-template> -->
