--- a/src/app/pages/profile/components/show-profile/show-profile.component.html
+++ b/src/app/pages/profile/components/show-profile/show-profile.component.html
@@ -1,4 +1,4 @@
-<nz-modal
+<!-- <nz-modal
   [(nzVisible)]="isVisible"
   nzTitle="Edit profile"
   (nzOnCancel)="handleCancel()"
@@ -81,4 +81,4 @@
 </div>
 <ng-template #profileNull>
   <strong>Profile is null</strong>
-</ng-template>
+</ng-template> -->
