--- a/src/app/pages/profile/components/show-skills/show-skills.component.html
+++ b/src/app/pages/profile/components/show-skills/show-skills.component.html
@@ -1,4 +1,4 @@
-<div class="title-skills" nz-row>
+<!-- <div class="title-skills" nz-row>
   <h1 nz-col nzSpan="21"><strong>Skills</strong></h1>
   <button
     id="btn-show-edit-skill"
@@ -18,4 +18,4 @@
   <nz-tag *ngFor="let skill of skills" [nzColor]="'#001429'">
     <strong>{{ skill.name }}</strong>
   </nz-tag>
-</nz-card>
+</nz-card> -->
