--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,69 +10,32 @@
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
         <ul>
+            <li nz-menu-item nzMatchRouter>
+                <a routerLink="/project">Project</a>
+              </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">Home</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/dayoff">Day Off</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/dayofftype">Day Off Type</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/skills">Skill</a>
-          </li>
-          <li nz-menu-item nzMatchRouter>
-            <a>Contact</a>
+            <a routerLink="/welcome">Day Off</a>
           </li>
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
         <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a>Request</a>
-          </li>
+            <li nz-menu-item nzMatchRouter>
+                <a routerLink="/dayoff">Day Off manage</a>
+            </li>
+        </ul>
+        <ul>
+            <li nz-menu-item nzMatchRouter>
+                <a routerLink="/dayofftype">Day Off Type</a>
+              </li>
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="Your" nzIcon="user">
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a>Profile</a>
-    <nz-sider *ngIf="isLogged()" class="menu-sidebar" nzCollapsible nzWidth="256px" nzBreakpoint="md" [(nzCollapsed)]="isCollapsed" [nzTrigger]="null">
-        <div class="sidebar-logo">
-            <a href="https://ng.ant.design/" target="_blank">
-                <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-                <h1>Helpdesk Novahub</h1>
-            </a>
-        </div>
-        
-        <ul  nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-            <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
-                <ul>
-                    <li nz-menu-item nzMatchRouter>
-                        <a>Category</a>
-                    </li>
-                    <li nz-menu-item nzMatchRouter>
-                        <a routerLink="/skills">Skill</a>
-                    </li>
-                    <li nz-menu-item nzMatchRouter>
-                        <a routerLink="/management">Management</a>
-                    </li>
-                </ul>
             </li>
-            <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
-                <ul>
-                    <li nz-menu-item nzMatchRouter>
-                        <a>Request</a>
-                    </li>
-                </ul>
-            </li>
-            <li nz-submenu nzOpen nzTitle="Your" nzIcon="user">
-                <ul>
-                    <li nz-menu-item nzMatchRouter>
-                        <a (click)="profile()">Profile</a>
-                    </li>
-                </ul>
+          </ul>
                 <ul>
                     <li nz-menu-item nzMatchRouter (click)="logout()">
                         <a>Logout</a>
@@ -80,11 +43,6 @@
                 </ul>
             </li>
         </ul>
-    </nz-sider>
-    </li>
-          </ul>
-      </li>
-    </ul>
   </nz-sider>
     <nz-layout>
         <nz-header *ngIf="isLogged()">
