--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -60,16 +60,18 @@
     <br/>
     <div class="form=form-group">
       <nz-form-item>
-        <label style="padding-right: 10px;"><br/>Comments: </label>
-        <input nz-input formControlName="description"/>
+        <label style="padding-right: 22px;"><br/>Comments: </label>
+        <input nz-input style=" margin-left: 80px; width: 355px; margin-top: 3px;" formControlName="description"/>
       </nz-form-item>
     </div>
   </form>
 </nz-modal>
-<button nz-button nzType="dashed" nzShape="circle" (click)="showModal()"><i nz-icon nzType="plus" nzTheme="outline"></i>
-</button>
+  <button nz-button nzType="dashed" nzShape="circle" (click)="showModal()"><i nz-icon nzType="plus" nzTheme="outline"></i>
+  </button>
 </div>
 <br/>
+<br>
+<br>
 <nz-table #editRowTable nzBordered [nzData]="data">
   <div class="types"></div>
   <thead>
@@ -97,4 +99,6 @@
   </tr>
   </tbody>
 </nz-table>
+<!-- <nz-calendar [(ngModel)]="date" [(nzMode)]="mode" (nzPanelChange)="panelChange($event)"></nz-calendar> -->
+
 
