--- a/src/app/pages/project-detail/project-detail.component.html
+++ b/src/app/pages/project-detail/project-detail.component.html
@@ -19,7 +19,7 @@
         <nz-card nzType="inner" style="margin-top:16px;" nzTitle="{{task.name}}" [nzExtra]="extraTask" [nzBordered]="true" style="border-radius: 5px;padding: 0px;border-color:rgb(171, 219, 203);background:rgb(236, 248, 244),;">
           <div style="display: block;">
           <a style="display: inline-block;">{{task.description}}</a>
-          <nz-progress nzType="line" [nzPercent]="60" [nzStrokeColor]="{ '0%': '#f44336', '100%': '#87d068' }"></nz-progress>
+          <nz-progress nzType="line" [nzPercent]="task.process" [nzStrokeColor]="{ '0%': '#f44336', '100%': '#87d068' }"></nz-progress>
         </div>
           <ng-template #extraTask>
             <!-- ------------------------------------ -->
@@ -127,9 +127,53 @@
         <i nz-icon nzType="pushpin" nzTheme="outline" style="display: inline-block;"></i>
         <b style="display: inline-block;margin-left: 5px;">Comment</b>
     </div>
+
+    <div *ngFor="let comment of comments"></div>
+
+
+
+    <nz-comment>
+      <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="user.avatar"></nz-avatar>
+      <nz-comment-content>
+        <nz-form-item>
+            <input nz-input [(ngModel)]="inputValue" style=" margin-left: 15px; width: 300px; margin-top: 0px;display: inline-block;"
+            />
+          <button nz-button [nzLoading]="submitting" [disabled]="!inputValue" (click)="handleSubmit()"  style="display: inline-block;margin-left: 10px;margin-top: 5px;"
+            nzType="primary">Add</button>
+        </nz-form-item>
+      </nz-comment-content>
+    </nz-comment>
   </ng-template>
+
+  <!-- --------------commment------------------ -->
+
+  
 
   <ng-template #modalFooter>
     <button nz-button nzType="default" (click)="handleCancelJob()">Close</button>
   </ng-template>
 </nz-modal>
+
+<!-- <nz-list *ngIf="comment.length" [nzDataSource]="comment" [nzRenderItem]="item" [nzItemLayout]="'horizontal'">
+  <ng-template #item let-item>
+    <nz-comment [nzAuthor]="item.author" [nzDatetime]="item.displayTime">
+      <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="item.avatar"></nz-avatar>
+      <nz-comment-content>
+        <p>{{ item.content }}</p>
+      </nz-comment-content>
+    </nz-comment>
+  </ng-template>
+</nz-list>
+<nz-comment>
+  <nz-avatar nz-comment-avatar nzIcon="user" [nzSrc]="user.avatar"></nz-avatar>
+  <nz-comment-content>
+    <nz-form-item>
+      <textarea [(ngModel)]="inputValue" nz-input rows="4"></textarea>
+    </nz-form-item>
+    <nz-form-item>
+      <button nz-button nzType="primary" [nzLoading]="submitting" [disabled]="!inputValue" (click)="handleSubmit()">
+        Add Comment
+      </button>
+    </nz-form-item>
+  </nz-comment-content>
+</nz-comment> -->
