fix layout inner content, full page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -73,8 +73,13 @@ nz-content {
   margin: 24px;
 }
 
+.ant-layout-content {
+  display: flex;
+  flex-direction: column;
+}
+
 .inner-content {
   padding: 24px;
   background: #fff;
-  height: 100%;
+  flex: 1;
 }
