--- a/src/app/pages/project/project/project.component.html
+++ b/src/app/pages/project/project/project.component.html
@@ -35,7 +35,7 @@
                   nzPopconfirmTitle="The project has not been accepted yet"
                   nzPopconfirmPlacement="top"
                  >{{project.name}}</a>
-              </ng-template>
+              </ng-template>`
               </ng-template>
           <div style="display: block;">
               <p style="display: inline-block;">{{project?.description}}</p>
